# rust_foundations

./: Cargo.toml
affinity/src/: main.rs
authentication/: Cargo.toml
authentication/src/: lib.rs
blocking/: Cargo.toml
blocking/src/: main.rs
channels1/: Cargo.toml
channels1/src/: main.rs
collector/: Cargo.toml
collector/src/: main.rs
dashing/: Cargo.toml
dashing/src/: main.rs
db/: Cargo.toml  hello_db.db  hello_db.db-shm  hello_db.db-wal
db/migrations/: 20260119153555_initial.sql  20260119155403_more_messages.sql
db/src/: main.rs
deadlocks/src/: main.rs
divide_work/src/: main.rs
dropping/src/: main.rs
errors/src/: main.rs
fileio/src/: main.rs
footgun/src/: main.rs
generics/src/: main.rs
hello/src/: main.rs
hello_async/src/: main.rs
iterators/src/: main.rs
lifetime/src/: main.rs
login/: Cargo.toml  users.json
login/src/: main.rs
login_manager/: Cargo.toml  users.json
login_manager/src/: main.rs
logtracing/: Cargo.toml
logtracing/src/: main.rs
memory/src/: main.rs
mutexes/src/: main.rs
parking/src/: main.rs
rayon_iters/src/: main.rs
rayon_scopes/src/: main.rs
restClient/: Cargo.toml
restClient/src/: main.rs
rwlocks/src/: main.rs
scoped_threads/src/: main.rs
server/: Cargo.toml
server/src/: collector.rs
shared_data/: Cargo.toml
shared_data/src/: lib.rs
thread_builder/src/: main.rs
thread_priorityy/: Cargo.toml
thread_priorityy/src/: main.rs
thumbs/: Cargo.toml  images.db  images.db-shm  images.db-wal
thumbs/src/: index.html  main.rs
tokio_example/: Cargo.toml
tokio_example/src/: main.rs
tokio_select/: Cargo.toml
tokio_select/src/: main.rs
tokio_testing/: Cargo.toml
tokio_testing/src/: main.rs
traits/src/: main.rs
variables/src/: main.rs
web_services/: Cargo.toml
web_services/src/: main.rs
workers/src/: main.rs
workers2/: Cargo.toml
workers2/src/: main.rs
