[package]
name = "rust_foundations"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"

[workspace]
members = ["affinity", "authentication", "blocking", "channels1", "dashing", "deadlocks", "divide_work", "errors", "fileio", "footgun", "hello", "hello_async", "login", "login_manager", "mutexes", "parking", "rayon_iters", "rayon_scopes", "rwlocks", "scoped_threads", "thread_builder", "thread_priorityy", "tokio_example", "tokio_testing", "variables", "workers", "workers2"]


