[package]
name = "rust_foundations"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[workspace]
members = ["affinity", "authentication", "blocking", "channels1", "dashing", "db", "deadlocks", "divide_work", "errors", "fileio", "footgun", "hello", "hello_async", "login", "login_manager", "logtracing", "mutexes", "parking", "rayon_iters", "rayon_scopes", "restClient", "rwlocks", "scoped_threads", "thread_builder", "thread_priorityy", "tokio_example", "tokio_select", "tokio_testing", "variables", "workers", "workers2"]


