[package]
name = "rust_foundations"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
futures = "0.3.31"
image = "0.25.9"
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
axum = { version = "0.8.8", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }

[workspace]
members = ["affinity", "authentication", "blocking", "channels1", "dashing", "db", "deadlocks", "divide_work", "dropping", "errors", "fileio", "footgun", "hello", "hello_async", "lifetime", "login", "login_manager", "logtracing", "memory", "mutexes", "parking", "rayon_iters", "rayon_scopes", "restClient", "rwlocks", "scoped_threads", "thread_builder", "thread_priorityy", "thumbs", "tokio_example", "tokio_select", "tokio_testing", "variables", "web_services", "workers", "workers2"]


