[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3.31"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15.0"
sql = "0.4.3"
