[package]
name = "thumbs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum =  { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
tokio-util = { workspace = true }