[package]
name = "web_services"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3.31"
dotenv = "0.15.0"
sql = "0.4.3"
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }

